# sfml-template

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md
src/: window.cpp
